layout/base/public/nsHTMLReflowMetrics.h
@@ -79,6 +79,17 @@ struct nsCollapsingMargin {
       {
       }
 
+    PRBool operator==(const nsCollapsingMargin& aOther)
+      {
+        return mMostPos == aOther.mMostPos &&
+          mMostNeg == aOther.mMostNeg;
+      }
+
+    PRBool operator!=(const nsCollapsingMargin& aOther)
+      {
+        return !(*this == aOther);
+      }
+
     nsCollapsingMargin& operator=(const nsCollapsingMargin& aOther)
       {
         mMostPos = aOther.mMostPos;
